@@ -204,7 +204,37 @@
           </execution>
         </executions>
       </plugin>
-
+      <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-surefire-plugin</artifactId>
+  <version>2.22.0</version>
+  <configuration>
+<argLine>-Xmx1G -XX:MaxPermSize=512m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled ${jacoco.agent.ut.arg}</argLine>
+  <excludes>
+    <exclude>**/*IT.java*</exclude>
+  </excludes>
+  </configuration>
+</plugin>
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-failsafe-plugin</artifactId>
+<version>2.22.0</version>
+<configuration>
+<argLine>-Xmx1G -XX:MaxPermSize=512m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled ${jacoco.agent.it.arg}</argLine>
+<includes>
+<includes>
+<include>**/*IT.java*</include>
+</includes>
+</configuration>
+<executions>
+<execution>
+<goals>
+<goal>integration-test</goal>
+<goal>verify</goal>
+</goals>
+</execution>
+</executions>
+</plugin>
     </plugins>
   </build>
 </project>
